add jobs
