# models/modelcrud/jobs.go
@@ -1,0 +1,338 @@
+// Code generated by SQLBoiler 4.6.0 (https://github.com/volatiletech/sqlboiler). DO NOT EDIT.
+// This file is meant to be re-generated in place and/or deleted at any time.
+
+package modelcrud
+
+import (
+	"github.com/calebhiebert/go-vue-template/api"
+	"github.com/gin-gonic/gin"
+)
+
+func (gcc *GeneratedCrudController) RegisterJobs(rg *gin.RouterGroup) {
+	rg.GET("/jobs/:id", gcc.GetJobByID)
+	rg.GET("/jobs", gcc.GetJobs)
+	rg.PUT("/jobs/:id", gcc.UpdateJobByID)
+	rg.POST("/jobs", gcc.CreateJob)
+	rg.DELETE("/jobs/:id", gcc.DeleteJobByID)
+	rg.DELETE("/jobs", gcc.BulkDeleteJobsByIDs)
+}
+
+var JobsAdmin = api.AdminModel{
+	Name:          "Jobs",
+	NameSingular:  "Job",
+	CanSoftDelete: false,
+	URLName:       "jobs",
+	DataName:      "jobs",
+	Fields: []*api.AdminModelField{
+		&api.AdminModelField{
+			ID:       "id",
+			Name:     "ID",
+			Nullable: false,
+			Required: true,
+			FilterOperations: []string{
+				"eq", "null"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      false,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "uuid",
+		},
+		&api.AdminModelField{
+			ID:       "type",
+			Name:     "Type",
+			Nullable: true,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null", "cont"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "string",
+		},
+		&api.AdminModelField{
+			ID:       "priority",
+			Name:     "Priority",
+			Nullable: false,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null", "gt", "lt", "gte", "lte"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "int",
+		},
+		&api.AdminModelField{
+			ID:       "source",
+			Name:     "Source",
+			Nullable: true,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null", "cont"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "string",
+		},
+		&api.AdminModelField{
+			ID:       "data",
+			Name:     "Data",
+			Nullable: true,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: false,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "json",
+		},
+		&api.AdminModelField{
+			ID:       "run_at",
+			Name:     "RunAt",
+			Nullable: true,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null", "gt", "lt", "gte", "lte"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "time",
+		},
+		&api.AdminModelField{
+			ID:       "failure_data",
+			Name:     "FailureData",
+			Nullable: true,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: false,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "json",
+		},
+		&api.AdminModelField{
+			ID:       "max_retries",
+			Name:     "MaxRetries",
+			Nullable: false,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null", "gt", "lt", "gte", "lte"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "int",
+		},
+		&api.AdminModelField{
+			ID:       "retry_count",
+			Name:     "RetryCount",
+			Nullable: true,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null", "gt", "lt", "gte", "lte"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "int",
+		},
+		&api.AdminModelField{
+			ID:       "status",
+			Name:     "Status",
+			Nullable: false,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null", "cont"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "string",
+		},
+		&api.AdminModelField{
+			ID:       "finished_at",
+			Name:     "FinishedAt",
+			Nullable: true,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null", "gt", "lt", "gte", "lte"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      true,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "time",
+		},
+		&api.AdminModelField{
+			ID:       "created_at",
+			Name:     "CreatedAt",
+			Nullable: true,
+			Required: false,
+			FilterOperations: []string{
+				"eq", "null", "gt", "lt", "gte", "lte"},
+			ForeignFields: []api.AdminModelForeignField{},
+			Editable:      false,
+			Config: api.AdminModelFieldConfig{
+				ShowOnGraph: true,
+				Editable:    true,
+				IsEmail:     false,
+			},
+			Type: "time",
+		},
+	},
+}
+
+type JobsModelConfigType struct {
+	ID api.AdminModelFieldConfig
+
+	Type api.AdminModelFieldConfig
+
+	Priority api.AdminModelFieldConfig
+
+	Source api.AdminModelFieldConfig
+
+	Data api.AdminModelFieldConfig
+
+	RunAt api.AdminModelFieldConfig
+
+	FailureData api.AdminModelFieldConfig
+
+	MaxRetries api.AdminModelFieldConfig
+
+	RetryCount api.AdminModelFieldConfig
+
+	Status api.AdminModelFieldConfig
+
+	FinishedAt api.AdminModelFieldConfig
+
+	CreatedAt api.AdminModelFieldConfig
+}
+
+var JobsModelConfig = JobsModelConfigType{
+
+	ID: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	Type: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	Priority: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	Source: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	Data: api.AdminModelFieldConfig{
+		ShowOnGraph: false,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	RunAt: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	FailureData: api.AdminModelFieldConfig{
+		ShowOnGraph: false,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	MaxRetries: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	RetryCount: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	Status: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	FinishedAt: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+	CreatedAt: api.AdminModelFieldConfig{
+		ShowOnGraph: true,
+		Editable:    true,
+		IsEmail:     false,
+	},
+}
+
+func (c JobsModelConfigType) Apply() {
+
+	JobsAdmin.Fields[0].Config = c.ID
+
+	JobsAdmin.Fields[1].Config = c.Type
+
+	JobsAdmin.Fields[2].Config = c.Priority
+
+	JobsAdmin.Fields[3].Config = c.Source
+
+	JobsAdmin.Fields[4].Config = c.Data
+
+	JobsAdmin.Fields[5].Config = c.RunAt
+
+	JobsAdmin.Fields[6].Config = c.FailureData
+
+	JobsAdmin.Fields[7].Config = c.MaxRetries
+
+	JobsAdmin.Fields[8].Config = c.RetryCount
+
+	JobsAdmin.Fields[9].Config = c.Status
+
+	JobsAdmin.Fields[10].Config = c.FinishedAt
+
+	JobsAdmin.Fields[11].Config = c.CreatedAt
+
+}
